LIFE-3625: Fixed word-break in live commentary

--- a/compiled/css/match-comments-iframe.css
+++ b/compiled/css/match-comments-iframe.css
@@ -11461,6 +11461,8 @@ span.glyphicon-star.active {
 .table.live-commentary tbody tr td.content p {
   font-size: 13px;
   font-weight: 500;
+  word-break: break-word;
+  overflow-wrap: break-word;
   margin: 0;
 }
 .table.live-commentary tbody tr td.content p + img,
