--- a/src/css/less/livescore/rules/match-summary/ls-live-commentary.less
+++ b/src/css/less/livescore/rules/match-summary/ls-live-commentary.less
@@ -31,6 +31,8 @@
           p{
             font-size: @font-size-base;
             font-weight: @font-weight-normal;
+            word-break: break-word;
+            overflow-wrap: break-word;
             margin: 0;
             
             & + img, & + iframe{
